include/sonare/sonare_c_acoustic.h


typedef struct {
  float length_m;
  float width_m;
  float height_m;
  float source_x;
  float source_y;
  float source_z;
  float listener_x;
  float listener_y;
  float listener_z;
  float absorption;     
  float max_seconds;    
  float mixing_time_ms; 
  float crossfade_ms;   
  int ism_order;        
  int late_model;       
  unsigned int seed;    
  const float* absorption_bands;
  size_t absorption_band_count;
  const float* scattering_bands;
  size_t scattering_band_count;
  int material_preset; 
  int air_absorption_enabled;
  float air_temperature_c;
  float air_humidity_percent;
} SonareRirSynthConfig;
typedef struct {
  float* rir; 
  size_t length;
  int sample_rate;
  int has_error;
} SonareRirSynthResult;
typedef struct {
  float aspect_hint_lw;        
  float aspect_hint_lh;        
  float reference_absorption;  
  float min_decay_db;          
  float noise_floor_margin_db; 
  int prefer_eyring;           
  int n_octave_bands;          
  int mode;                    
} SonareRoomEstimateConfig;
typedef struct {
  float volume;   
  float length_m; 
  float width_m;
  float height_m;
  float drr_db;     
  float confidence; 
  float* absorption_bands;
  float* rt60_bands;
  size_t band_count; 
} SonareRoomEstimate;
typedef struct {
  float length_m;
  float width_m;
  float height_m;
  float source_x;
  float source_y;
  float source_z;
  float listener_x;
  float listener_y;
  float listener_z;
  float absorption;              
  float source_tail_suppression; 
  float wet;                     
  float max_seconds;             
  float mixing_time_ms;          
  float crossfade_ms;            
  int ism_order;
  int late_model;    
  unsigned int seed; 
  const float* absorption_bands;
  size_t absorption_band_count;
  const float* scattering_bands;
  size_t scattering_band_count;
  int material_preset; 
  int air_absorption_enabled;
  float air_temperature_c;
  float air_humidity_percent;
} SonareRoomMorphConfig;
SonareError sonare_synthesize_rir(const SonareRirSynthConfig* config, int sample_rate,
                                  SonareRirSynthResult* out);
void sonare_free_rir_synth_result(SonareRirSynthResult* result);
SonareError sonare_estimate_room(const float* samples, size_t length, int sample_rate,
                                 const SonareRoomEstimateConfig* config, SonareRoomEstimate* out);
void sonare_free_room_estimate(SonareRoomEstimate* result);
SonareError sonare_room_morph(const float* samples, size_t length, int sample_rate,
                              const SonareRoomMorphConfig* config, float** out, size_t* out_length);