bindings/python/src/libsonare/_ffi_signatures_core.py

"""ctypes function signatures for libsonare."""
# ruff: noqa: F405

from __future__ import annotations

import ctypes

from ._ffi_types import *  # noqa: F403,F405


def configure_core_signatures(lib: ctypes.CDLL) -> None:
    # --- Audio functions ---

    # sonare_audio_from_buffer
    lib.sonare_audio_from_buffer.restype = ctypes.c_int32
    lib.sonare_audio_from_buffer.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.c_void_p),
    ]

    # sonare_audio_from_memory
    lib.sonare_audio_from_memory.restype = ctypes.c_int32
    lib.sonare_audio_from_memory.argtypes = [
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_void_p),
    ]

    # sonare_audio_from_file
    lib.sonare_audio_from_file.restype = ctypes.c_int32
    lib.sonare_audio_from_file.argtypes = [
        ctypes.c_char_p,
        ctypes.POINTER(ctypes.c_void_p),
    ]

    # sonare_audio_free
    lib.sonare_audio_free.restype = None
    lib.sonare_audio_free.argtypes = [ctypes.c_void_p]

    # sonare_audio_data
    lib.sonare_audio_data.restype = ctypes.POINTER(ctypes.c_float)
    lib.sonare_audio_data.argtypes = [ctypes.c_void_p]

    # sonare_audio_length
    lib.sonare_audio_length.restype = ctypes.c_size_t
    lib.sonare_audio_length.argtypes = [ctypes.c_void_p]

    # sonare_audio_sample_rate
    lib.sonare_audio_sample_rate.restype = ctypes.c_int
    lib.sonare_audio_sample_rate.argtypes = [ctypes.c_void_p]

    # sonare_audio_duration
    lib.sonare_audio_duration.restype = ctypes.c_float
    lib.sonare_audio_duration.argtypes = [ctypes.c_void_p]

    lib.sonare_audio_detect_bpm.restype = ctypes.c_int32
    lib.sonare_audio_detect_bpm.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_float)]

    lib.sonare_audio_detect_key.restype = ctypes.c_int32
    lib.sonare_audio_detect_key.argtypes = [ctypes.c_void_p, ctypes.POINTER(SonareKey)]

    lib.sonare_audio_detect_beats.restype = ctypes.c_int32
    lib.sonare_audio_detect_beats.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    lib.sonare_audio_detect_downbeats.restype = ctypes.c_int32
    lib.sonare_audio_detect_downbeats.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    lib.sonare_audio_detect_onsets.restype = ctypes.c_int32
    lib.sonare_audio_detect_onsets.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    lib.sonare_audio_analyze.restype = ctypes.c_int32
    lib.sonare_audio_analyze.argtypes = [ctypes.c_void_p, ctypes.POINTER(SonareAnalysisResult)]

    # --- Quick detection functions ---

    # sonare_detect_bpm
    lib.sonare_detect_bpm.restype = ctypes.c_int32
    lib.sonare_detect_bpm.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.c_float),
    ]

    # sonare_detect_key
    lib.sonare_detect_key.restype = ctypes.c_int32
    lib.sonare_detect_key.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(SonareKey),
    ]

    # sonare_detect_key_with_options
    lib.sonare_detect_key_with_options.restype = ctypes.c_int32
    lib.sonare_detect_key_with_options.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(SonareKey),
    ]

    lib.sonare_detect_key_with_options_and_modes.restype = ctypes.c_int32
    lib.sonare_detect_key_with_options_and_modes.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.c_int32),
        ctypes.c_size_t,
        ctypes.POINTER(SonareKey),
    ]

    lib.sonare_detect_key_with_extended_options.restype = ctypes.c_int32
    lib.sonare_detect_key_with_extended_options.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.c_int32),
        ctypes.c_size_t,
        ctypes.c_int32,
        ctypes.c_char_p,
        ctypes.POINTER(SonareKey),
    ]

    lib.sonare_detect_key_candidates.restype = ctypes.c_int32
    lib.sonare_detect_key_candidates.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(SonareKeyCandidate)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    lib.sonare_detect_key_candidates_with_modes.restype = ctypes.c_int32
    lib.sonare_detect_key_candidates_with_modes.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.c_int32),
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.POINTER(SonareKeyCandidate)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    lib.sonare_detect_key_candidates_with_extended_options.restype = ctypes.c_int32
    lib.sonare_detect_key_candidates_with_extended_options.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.c_int32),
        ctypes.c_size_t,
        ctypes.c_int32,
        ctypes.c_char_p,
        ctypes.POINTER(ctypes.POINTER(SonareKeyCandidate)),
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.sonare_free_key_candidates.restype = None
    lib.sonare_free_key_candidates.argtypes = [ctypes.POINTER(SonareKeyCandidate)]

    # sonare_detect_beats
    lib.sonare_detect_beats.restype = ctypes.c_int32
    lib.sonare_detect_beats.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    lib.sonare_detect_downbeats.restype = ctypes.c_int32
    lib.sonare_detect_downbeats.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_detect_onsets
    lib.sonare_detect_onsets.restype = ctypes.c_int32
    lib.sonare_detect_onsets.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # --- Full analysis ---

    # sonare_analyze
    lib.sonare_analyze.restype = ctypes.c_int32
    lib.sonare_analyze.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(SonareAnalysisResult),
    ]

    lib.sonare_analyze_bpm.restype = ctypes.c_int32
    lib.sonare_analyze_bpm.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.POINTER(SonareBpmAnalysisResult),
    ]

    lib.sonare_analyze_impulse_response.restype = ctypes.c_int32
    lib.sonare_analyze_impulse_response.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.POINTER(SonareAcousticResult),
    ]

    lib.sonare_detect_acoustic.restype = ctypes.c_int32
    lib.sonare_detect_acoustic.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.POINTER(SonareAcousticResult),
    ]

    lib.sonare_analyze_rhythm.restype = ctypes.c_int32
    lib.sonare_analyze_rhythm.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.POINTER(SonareRhythmResult),
    ]

    lib.sonare_analyze_dynamics.restype = ctypes.c_int32
    lib.sonare_analyze_dynamics.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(SonareDynamicsResult),
    ]

    lib.sonare_analyze_timbre.restype = ctypes.c_int32
    lib.sonare_analyze_timbre.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(SonareTimbreResult),
    ]

    lib.sonare_detect_chords.restype = ctypes.c_int32
    lib.sonare_detect_chords.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.POINTER(SonareChordAnalysisResult),
    ]

    lib.sonare_detect_chords_ex.restype = ctypes.c_int32
    lib.sonare_detect_chords_ex.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(SonareChordDetectionOptions),
        ctypes.POINTER(SonareChordAnalysisResult),
    ]

    lib.sonare_chord_functional_analysis.restype = ctypes.c_int32
    lib.sonare_chord_functional_analysis.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(SonareChordDetectionOptions),
        ctypes.c_int32,
        ctypes.c_int32,
        ctypes.POINTER(SonareStringArray),
    ]

    if hasattr(lib, "sonare_synthesize_rir"):
        lib.sonare_synthesize_rir.restype = ctypes.c_int32
        lib.sonare_synthesize_rir.argtypes = [
            ctypes.POINTER(SonareRirSynthConfig),
            ctypes.c_int,
            ctypes.POINTER(SonareRirSynthResult),
        ]
        lib.sonare_free_rir_synth_result.restype = None
        lib.sonare_free_rir_synth_result.argtypes = [ctypes.POINTER(SonareRirSynthResult)]

    if hasattr(lib, "sonare_estimate_room"):
        lib.sonare_estimate_room.restype = ctypes.c_int32
        lib.sonare_estimate_room.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(SonareRoomEstimateConfig),
            ctypes.POINTER(SonareRoomEstimate),
        ]
        lib.sonare_free_room_estimate.restype = None
        lib.sonare_free_room_estimate.argtypes = [ctypes.POINTER(SonareRoomEstimate)]

    if hasattr(lib, "sonare_room_morph"):
        lib.sonare_room_morph.restype = ctypes.c_int32
        lib.sonare_room_morph.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(SonareRoomMorphConfig),
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]
